# quarto-agents

./: CHANGELOG.md  Dockerfile  README.md  interactive_game.py  pyproject.toml
.github/workflows/: publish.yml  release.yml
examples/: interactive_game.py  poc.ipynb
src/agents/interactive/: agent.py
src/agents/minimax/: agent.py
src/agents/random/: agent.py
src/quarto_agents/: agent_loader.py  main.py
src/quarto_agents/interactive/: agent.py  utils.py
src/quarto_agents/minimax/: agent.py
src/quarto_agents/random/: agent.py
