[project]
name = "quarto-agents"
version = "0.1.0"
description = "Project to develop a set of Quarto-Agents"
authors = [
    {name = "patapelada", email = "77882237+patapelada@users.noreply.github.com"},
]
dependencies = ["termcolor>=3.1.0", "tabulate>=0.9.0", "questionary>=2.1.0", "ipykernel>=6.29.5", "fastapi[standard]>=0.115.12", "quarto-lib>=3.1.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
