[project]
name = "quarto-agents"
version = "0.1.0"
description = "Project to develop a set of Quarto-Agents"
authors = [
    {name = "patapelada", email = "77882237+patapelada@users.noreply.github.com"},
]
dependencies = ["fastapi[standard]>=0.115.12"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm.scripts]
minimax = "env PYTHONPATH=src AGENT_MODULE=quarto_agents.minimax.agent uvicorn quarto_agents.main:app --reload --port=8001"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../quarto-lib#egg=quarto-lib",
]
[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "termcolor>=3.1.0",
    "tabulate>=0.9.0",
    "questionary>=2.1.0",
]
